mejorando routes and login con socialite

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "leftjoin",
-        "OSWALDO",
-        "Reponse"
-    ]
+    "cSpell.words": ["CLOUDINARY", "leftjoin", "OSWALDO", "Reponse"]
 }
